# trivialplugin

./: .hgsubstate  CMakeLists.txt  README  config.inc  definitions.h  translations.inc  trivialplugin.cpp  trivialplugin.h  trivialplugin.pri  trivialplugin.pro
documents/: CHANGELOG  INSTALL  README
resources/menuicons/shared/: trivialplugin.def.xml
translations/.tx/: config
translations/en/: trivialplugin.ts
translations/es/: trivialplugin.ts
translations/pl/: trivialplugin.ts
translations/uk/: trivialplugin.ts
